--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.8",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.31",
     "@types/react-dom": "^16.9.6",
+    "ink-testing-library": "^1.0.3",
     "jest": "^25.2.4",
     "nexe": "^3.3.2",
     "parcel-bundler": "^1.12.4",
