--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/react-dom": "^16.9.6",
     "ink-testing-library": "^1.0.3",
     "jest": "^25.2.4",
-    "nexe": "^3.3.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.2",
     "ts-jest": "^25.3.0",
@@ -31,6 +30,7 @@
   },
   "dependencies": {
     "ink": "^2.7.1",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "yoga-layout-prebuilt": "^1.9.5"
   }
 }
