--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ink": "^2.7.1",
     "react": "^16.13.1",
     "yoga-layout-prebuilt": "^1.9.5"
