--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "compile": "parcel build ./src/index.ts --out-dir build --out-file quiz-scores.js --target node --bundle-node-modules --no-source-maps",
     "start": "npm run compile && node ./build/quiz-scores.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "USE_COVERAGE=true jest"
   },
-  "keywords": [
-    "react",
-    "ink",
-    "cli"
-  ],
+  "keywords": ["react", "ink", "cli"],
   "author": "matt-clarson",
   "license": "ISC",
   "devDependencies": {
